--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@ Nothing !?!?
         <li class="plan-lists__list">2000.00.00</li>
       </ul>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
