basic function complete

--- a/index.html
+++ b/index.html
@@ -2,38 +2,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet" />
+    <style>
+      a {
+        color: white;
+      }
+    </style>
+    <title>Review Planer</title>
   </head>
   <body>
-    <h1 class="title">Review Planer</h1>
-    <form class="form">
-      <div class="today">
-        <label for="start">Start date</label>
-        <input
-          type="date"
-          id="start"
-          name="learning-start"
-          value="2020-04-15"
-          min="2020-01-01"
-          max="2020-12-31"
-        />
-        <div class="content">
-          <label for="content">Tell us what you today learned:</label>
-          <textarea id="content" name="content" rows="5" cols="33">
-Nothing !?!?
-</textarea
-          >
-        </div>
-      </div>
-    </form>
-    <div class="plan">
-      <h3 class="plan-title">You studied:</h3>
-      <span class="plan-content">this, this and this</span>
-      <span>You should review these on:</span>
-      <ul class="plan-lists">
-        <li class="plan-lists__list">2000.00.00</li>
-      </ul>
-    </div>
+    <header>
+      <h1>Review Planer</h1>
+    </header>
+    <main>
+      <header>
+        <span class="js-today">Today: 2000.00.00</span>
+      </header>
+      <form class="input-form">
+        <input type="text" placeholder="What did you learn?" />
+        <button>Create Plan</button>
+        <button>
+          <a href="javascript:location.reload(true)">Reset</a>
+        </button>
+      </form>
+    </main>
     <script src="main.js"></script>
   </body>
 </html>
