--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </header>
     <main>
       <header>
-        <span class="js-today">Today: 2000.00.00</span>
+        <h3 class="js-today">Today: 2000.00.00</h3>
+        <h4>오늘 배운 것을 입력하세요.</h4>
+        <h4>
+          내일, 3일 후, 10일 후, 한달 후 복습해야 할 정확한 날짜를 알려드립니다.
+        </h4>
       </header>
       <form class="input-form">
         <input type="text" placeholder="What did you learn?" />
