--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </h4>
       </header>
       <form class="input-form">
-        <input type="text" placeholder="What did you learn?" />
+        <input type="text" placeholder="What did you learn?" required />
         <button>Create Plan</button>
         <button>
           <a href="javascript:location.reload(true)">Reset</a>
