--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <h3 class="js-today">오늘: 2000.00.00</h3>
         <h4>오늘 배운 것을 입력하세요.</h4>
         <h4>
-          내일, 3일 후, 7일 후, 15일 후, 30일 후 복습해야 할 날짜를
-          알려드립니다.
+          내일, 3일, 7일, 15일, 30일 후 복습해야 할 날짜를 알려드립니다.
         </h4>
       </header>
       <form class="input-form">
