--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet" />
+    <link rel="stylesheet" href="index.css" />
     <style>
       a {
         color: white;
@@ -19,8 +20,9 @@
         <h3 class="js-today">오늘: 2000.00.00</h3>
         <h4>오늘 배운 것을 입력하세요.</h4>
         <h4>
-          내일, 3일, 7일, 15일, 30일 후 복습해야 할 날짜를 알려드립니다.
+          1일, 3일, 7일, 15일 후 날짜를 알려드립니다. 복습하세요!
         </h4>
+        <h4>한국인은 복습도 최소 삼세판!</h4>
       </header>
       <form class="input-form">
         <input type="text" placeholder="What did you learn?" required />
@@ -28,6 +30,11 @@
         <button>
           <a href="javascript:location.reload(true)">Reset</a>
         </button>
+      </form>
+      <form class="output-form">
+        <h2 class="output-title">복습 플래너</h2>
+        <h3 class="output-content"></h3>
+        <ul class="output-list"></ul>
       </form>
     </main>
     <script src="main.js"></script>
